@@ -189,6 +189,12 @@ class Continuous3BandGraphicalForm implements ColorManipulationChildForm {
         currentChannelSources[1] = rasters[1];
         currentChannelSources[2] = rasters[2];
 
+        final Band[] availableBands = productSceneView.getProduct().getBands();
+        channelSourcesList.clear();
+        appendToChannelSources(currentChannelSources);
+        appendToChannelSources(initialChannelSources);
+        appendToChannelSources(availableBands);
+
         for (int i = 0; i < models.length; i++) {
             if (models[i] != null) {
                 models[i].removeChangeListener(applyEnablerCL);
@@ -205,17 +211,10 @@ class Continuous3BandGraphicalForm implements ColorManipulationChildForm {
             models[i].addChangeListener(applyEnablerCL);
         }
 
-        final Band[] availableBands = productSceneView.getProduct().getBands();
-        channelSourcesList.clear();
-        appendToChannelSources(currentChannelSources);
-        appendToChannelSources(initialChannelSources);
-        appendToChannelSources(availableBands);
-
         final String[] sourceNames = new String[channelSourcesList.size()];
         for (int i = 0; i < channelSourcesList.size(); i++) {
             sourceNames[i] = channelSourcesList.get(i).getName();
         }
-
         moreOptionsForm.getBindingContext().getPropertySet().getProperty(CHANNEL_SOURCE_NAME_PROPERTY).getDescriptor().setValueSet(new ValueSet(sourceNames));
 
         acknowledgeChannel();
