@@ -12,6 +12,7 @@
     <changelog>
         <![CDATA[
         <p>Changes in 4.8.1<br/>
+          [BEAM-1194] Open RGB in image view leads to "Unknown band:" error<br/>        
           [BEAM-1184] Reprojection dialog does not remember values<br/>
           [BEAM-1183] Improve reprojection UI usability<br/>
           [BEAM-1177] Index out of bounds for RGB View<br/>
